--- a/GrpcQuic/TestGrpcClient/TestClientGrpc.csproj
+++ b/GrpcQuic/TestGrpcClient/TestClientGrpc.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="GrpcClientService.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.19.1" />
     <PackageReference Include="Grpc.Net.Client" Version="2.41.0-pre1" />
     <PackageReference Include="Grpc.Net.Common" Version="2.41.0-pre1" />
